<?php

namespace App\Model\Entity;

abstract class AbstractEntity
{
    protected ?int $id = null;

    public function __construct(?int $id = null)
    {
        $this->id = $id;
    }

    public function getId(): ?int
    {
        return $this->id;
    }

    public function setId(?int $id): static
    {
        $this->id = $id;
        return $this;
    }
}
