<?php

namespace App\Model\Entity;

class Commande extends Vente
{
}
